--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -1,17 +1,16 @@
+#    声明这个微服务的名称是eureka-server
+spring:
+  application:
+    name: eureka-server
+#    主机名
 eureka:
   instance:
-#    主机名
     hostname: localhost
   client:
 #    是否注册到eureka服务端  本身就是服务端  就不需要注册了
     registerWithEureka: false
-#    是否获取服务端的注册信息  同上理由
+#    是否获取服务端的注册信息  本身就是服务端  就不需要注册了
     fetchRegistry: false
-    serviceUrl:
 #      默认eureka服务端地址 http://localhost:8761/eureka/
+    serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
- 
-spring:
-  application:
-#    声明这个微服务的名称是eureka-server
-    name: eureka-server
