--- a/pom.xml
+++ b/pom.xml
@@ -53,12 +53,13 @@
         </dependencies>
     </dependencyManagement>
 
-<!--    eureka服务端-->
+<!--    子模块-->
     <modules>
     	<module>eureka-server</module>
         <module>product-data-service</module>
         <module>product-view-service-ribbon</module>
         <module>product-view-service-feign</module>
+        <module>config-server</module>
     </modules>
 
 </project>
