--- a/product-data-service/src/main/resources/application.yml
+++ b/product-data-service/src/main/resources/application.yml
@@ -2,14 +2,14 @@
 #   port: 因为会启动多个 product-data-service, 所以端口号由用户自动设置，推荐 8001,8002,8003
 
 spring:
-  application:
 #    微服务名:product-data-service
+  application:
     name: product-data-service
+#    数据链路追踪zipkin地址
   zipkin:
-#    zipkin url
     base-url: http://localhost:9411
+#    声明eureka地址
 eureka:
   client:
     serviceUrl:
-#      eureka地址
       defaultZone: http://localhost:8761/eureka/
