--- a/product-view-service-feign/pom.xml
+++ b/product-view-service-feign/pom.xml
@@ -35,6 +35,11 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-zipkin</artifactId>
     </dependency>
+<!--    用于访问配置服务器-->
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-config</artifactId>
+    </dependency>
 
   </dependencies>
 
