--- a/product-view-service-feign/pom.xml
+++ b/product-view-service-feign/pom.xml
@@ -35,10 +35,20 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-zipkin</artifactId>
     </dependency>
-<!--    用于访问配置服务器-->
+<!--    配置服务器-->
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-config</artifactId>
+    </dependency>
+<!--    用于访问路径：/actuator/bus-refresh-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
+<!--      rabbitmq-->
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-bus-amqp</artifactId>
     </dependency>
 
   </dependencies>
