--- a/product-view-service-feign/src/main/resources/application.yml
+++ b/product-view-service-feign/src/main/resources/application.yml
@@ -11,3 +11,13 @@ spring:
     mode: HTML5
   zipkin:
     base-url: http://localhost:9411 #zipkin 地址
+
+#这样才能访问 /actuator/bus-refresh
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+      cors:
+        allowed-origins: "*"
+        allowed-methods: "*"
