--- a/product-view-service-feign/src/main/resources/bootstrap.yml
+++ b/product-view-service-feign/src/main/resources/bootstrap.yml
@@ -6,6 +6,17 @@ spring:
       discovery:
         enabled:  true
         serviceId:  config-server #配置服务器在 eureka server 里的服务名称，用于定位 config-server
+#    but总线配置
+    bus:
+      enabled: true
+      trace:
+        enabled: true
   client:
     serviceUrl:
       defaultZone:  http://localhost:8761/eureka/ #声明eureka地址
+#rabbitMQ 配置
+rabbitmq:
+  host: localhost
+  port: 5672
+  username: guest
+  password: guest
